cmake_minimum_required(VERSION 3.15)
project(pig_solver)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "-O3")
set(CMAKE_CXX_COMPILER "/usr/local/opt/llvm/bin/clang++" )
set(CMAKE_C_COMPILER "/usr/local/opt/llvm/bin/clang")
set(HAVE_CBLAS 1)
include_directories("/usr/local/include" "/usr/local/opt/llvm/include" "/usr/local/include/eigen3" "/usr/local/opt/openblas/include")
include_directories("/usr/local/opt/xtl/include" "/usr/local/opt/xtensor/include" "/usr/local/opt/xtensor-blas/include")
link_directories("/usr/local/lib" "/usr/local/opt/llvm/lib" "/usr/local/opt/openblas/lib")
add_definitions(-O2 -O3 -fopenmp)
add_executable(pig_solver pig_solver.cpp)
target_link_libraries(pig_solver -lomp -lblas -llapack )